--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="single_banner">
                             <div class="banner_thumb">
-                                <a href="#"><img src="banner/bg-1.jpg" alt="banner1"></a>
+                                <a href="#"><img src="bg-1.jpg" alt="banner1"></a>
                                 <div class="banner_content">
                                     <p>New Design</p>
                                     <h2>Small design Rings</h2>
